--- a/styles/style.css
+++ b/styles/style.css
@@ -90,12 +90,14 @@ body {
 
 .navigation {
   display: flex;
+
+  margin-left: 28px;
 }
 
 .navigation-list {
   list-style: none;
 
-  margin-left: 26px;
+  margin: 0 0 0 26px;
   padding: 0;
 
   display: flex;
@@ -115,6 +117,7 @@ body {
   list-style: none;
 
   padding: 0;
+  margin: 0;
 
   display: flex;
 }
