--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,43 @@
   src: url(../fonts/ptsans-700.woff2) format("woff2");
 }
 
+html {
+  height: 100%;
+}
+
+
+body {
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+
+  height: 100%;
+  width: 1280px;
+  margin: 0 auto;
+
+  background-color: #f2f2f2;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+
+  background-color: #fff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -27,26 +64,6 @@
   overflow: hidden;
 }
 
-body {
-  font-family: "PT Sans", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 26px;
-
-  width: 1280px;
-  margin: 0 auto;
-
-  background-color: #f2f2f2;
-}
-
-.page-container {
-  width: 1200px;
-  margin: 0 auto;
-
-  background-color: #fff;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-}
 
 .button {
   cursor: pointer;
@@ -90,6 +107,10 @@ body {
   display: flex;
 
   position: relative;
+
+  z-index: 1;
+
+
 }
 
 .main-logo-link {
@@ -105,11 +126,13 @@ body {
 }
 
 .navigation {
-  margin: 0;
-  flex-grow: 1;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  width: 100%;
+  margin: 0 0 -1px 0;
 }
 
 .navigation-list {
@@ -121,13 +144,15 @@ body {
 
 .navigation-list-item {
   margin: 0 32px 0 0;
-  padding: 20px 0;
-
+ padding: 20px 0 19px 0;
   box-sizing: border-box;
-  max-height: 64px;
 }
 
-.curent-item {
+.navigation-list-item:last-child {
+  margin: 0;
+}
+
+.navigation-list-curent-item {
   border-bottom: 2px solid #756257;
 }
 
@@ -146,7 +171,7 @@ body {
 
   padding: 0;
   margin: 0 70px 0 0;
-
+  height: 100%;
   display: flex;
 }
 
@@ -159,18 +184,24 @@ body {
   position: relative;
 }
 
+
 .favorites-number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+
   position: absolute;
-  left: calc(50% - 11px/2 + 7.5px);
-  top: calc(50% - 10px/2 - 11px);
-  border-radius: 10px;
-  background-color: #7db54f;
+  left: 20px;
+  top: 10px;
 
-  width: 11px;
-  height: 10px;
-
+  font-weight: 400;
   font-size: 10px;
   line-height: 10px;
+  color: #fff;
+  background-color: #7db54f;
+  border-radius: 10px;
 }
 
 .navigation-user-list-item img {
@@ -197,9 +228,11 @@ body {
   background-color:tomato;
   background-image: url(../images/index-hero-background.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+
 
   margin-bottom: 69px;
+
+  position: relative;
 }
 
 .welcome::after {
@@ -212,7 +245,6 @@ body {
 
 .hero-img {
   padding-top: 51px;
-  padding-bottom: 82px;
   display: inline-block;
   vertical-align: middle;
   margin: 0 auto;
@@ -503,6 +535,7 @@ input[type="email"]::placeholder {
   font-size: 60px;
   line-height: 78px;
   text-align: center;
+  margin: 0;
 }
 
 .breadcrumbs {
