--- a/styles/style.css
+++ b/styles/style.css
@@ -707,7 +707,7 @@ input[type="email"]::placeholder {
 .sorting-wrapper {
   display: flex;
   align-items: center;
-  margin: 0 0 40px 0;
+  margin: 0 0 32px 0;
 }
 
 .searching-results-quantity {
@@ -753,21 +753,22 @@ input[type="email"]::placeholder {
   padding: 0;
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 8px;
 }
 
 
 .view-type-item {
-  width: 48px;
-  height: 48px;
-
+  min-width: 48px;
+  min-height: 48px;
   box-sizing: border-box;
-
   border: 2px solid #e5e5e5;
   border-radius: 4px;
+  margin: 0 8px 0 0;
 }
 
-.view-type-item:not(:last-child) {
-  margin: 0 8px 0 0;
+.view-type-item:last-child {
+  margin-right: 0;
 }
 
 .view-type-item:first-child {
@@ -775,11 +776,10 @@ input[type="email"]::placeholder {
 }
 
 .sorting-button {
-  min-width: 48px;
-  min-height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .hotel-list {
@@ -883,6 +883,7 @@ input[type="email"]::placeholder {
   padding: 0;
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .pagination-list li:first-child {
