--- a/styles/style.css
+++ b/styles/style.css
@@ -83,16 +83,23 @@ main {
 
   display: block;
 
-
-  /* max-width: 140px; */
-
-
   box-sizing: border-box;
 
   border: 0;
   border-radius: 4px;
 
   padding: 8px 26px;
+
+  outline: none;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #615048;
+}
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 /* Header */
@@ -215,6 +222,7 @@ main {
   max-width: 160px;
   margin-left: 20px;
 }
+
 
 /* main (index)*/
 
@@ -513,6 +521,11 @@ input[type="email"]::placeholder {
   line-height: 36px;
 }
 
+.mailing-button:hover,
+.mailing-button:focus {
+  background-color: #68A2CA;
+}
+
 /* main (catalog) */
 
 /* header .main-inner-header */
@@ -748,9 +761,34 @@ input[type="email"]::placeholder {
   background-color: #82b3d3;
 }
 
+.submit:hover,
+.submit:focus {
+  background-color: #68A2CA;
+}
+
 .reset {
   margin: 0 auto;
   background-color: transparent;
+  width: 100%;
+  height: 36px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reset:hover {
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+}
+
+.reset:focus {
+  border-radius: 4px;
+  border: 3px solid #83B3D3;
+  background-color: transparent;
+}
+
+.reset:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 /* section .searching-results */
@@ -891,9 +929,19 @@ input[type="email"]::placeholder {
   padding: 8px 20px;
 }
 
+.add-to-favorites:hover,
+.add-to-favorites:focus {
+  background-color: #68A2CA;
+}
+
 .added-to-favorites {
   background-color: #7db54f;
   padding: 8px 18px;
+}
+
+.added-to-favorites:hover,
+.added-to-favorites:focus {
+  background-color: #6C9E42;
 }
 
 .rating-stars {
