--- a/styles/style.css
+++ b/styles/style.css
@@ -606,10 +606,6 @@ input[type="email"]::placeholder {
   margin: 0 70px 0 0;
 }
 
-.hotel-filter-price-wrapper {
-  display: flex;
-  margin: 0 0 36px 0;
-}
 
 .hotel-filter-group-title {
   font-weight: 700;
@@ -682,40 +678,39 @@ input[type="email"]::placeholder {
   background-position: center;
 }
 
-.hotel-filter-price {
-  font-size: 18px;
-  line-height: 24px;
-  /* color: #000; */
-  min-width: 143px;
-  height: 48px;
-  background-color: #f2f2f2;
+/* Price */
+
+.hotel-filter-price-wrapper {
   display: flex;
-  justify-content: space-between;
+  margin: 0 0 36px 0;
 }
 
-.input-wrapper-min-price {
+.input-wrapper {
   position: relative;
   display: flex;
   align-items: center;
 }
 
-
-.input-wrapper-min-price::after {
-  content: "от";
+.input-wrapper::after {
   color: #000;
   position: absolute;
   font-size: 18px;
-  font-family: PT Sans;
   line-height: 24px;
   opacity: 0.3;
+  right: 20px;
 }
 
-.input-wrapper-max-price::after {
+.min-price::after {
+  content: "от";
+}
+
+.max-price::after {
   content: "до";
-  color: #000;
 }
 
-.hotel-filter-min-price {
+.hotel-filter-price {
+  font-family: PT Sans;
+  font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
@@ -723,28 +718,18 @@ input[type="email"]::placeholder {
   background-color: #f2f2f2;
   box-sizing: border-box;
   border: 0;
-  border-radius: 0 4px 4px 0;
-  padding: 12px 20px;
+  outline: none;
+  padding: 12px 45px 12px 20px;
   width: 143px;
 }
 
-/* .min-price {
+.min {
   border-radius: 4px 0 0 4px;
   margin: 0 2px 0 0;
-} */
+}
 
-.max-price {
+.max {
   border-radius: 0 4px 4px 0;
-}
-
-.hotel-filter-price span:first-child {
-  font-weight: 700;
-  padding: 12px 0 12px 20px;
-}
-
-.hotel-filter-price span:last-child {
-  opacity: 0.3;
-  padding: 12px 20px 12px 0;
 }
 
 .slider-filter {
